--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OMofyoQBZ-o4sXmRyFH625V
                 <td>SGE.CORS/2020/4</td>
                 <td>455831.538</td>
                 <td>904842.406</td>
-                <td>Functioning</td> 
+                <td>Not Functioning</td> 
             </tr>
             </tr>
 
