--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#" class= "nav-branding" ><span class="red">Beacon</span><span class="gold">Sur</span><span class="green">vey</span></a>
-            <ul class="nav-menu">
+            <a href="#" class= "nav-branding"><span class="red">Rec</span><span class="gold">Sur</span><span class="green">vey</span></a>
+            <ul class="nav-menu"> 
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
