--- a/index.html
+++ b/index.html
@@ -125,107 +125,117 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OMofyoQBZ-o4sXmRyFH625V
                 <table id="portexe-data-table">
                 <thead>
                     <tr>
+                        <th>Region/Town</th>
                       <th>Beacon ID</th>
                       <th>Northing(X)</th>
                       <th>Easting(Y)</th>
-                        <th>Status of CORS</th>
+                      <th>Status of CORS</th>   
                   </tr>
                 </thead>
             <tbody>
               <tr>
-                      <th colspan="4">HO</th>
+                   <!---<th colspan="5">Volta Region</th>-->
                   </tr>
                   <tr> 
+                  <td>Volta Region,HO</td>
                   <td>SGV.CORS/2020/1</td>
                   <td>704374.684</td>
                   <td>1429667.308</td>
-                  <td>Functioning</td>   
-              </tr>
-
+                  <td>Functioning</td>
+                  </tr>
 
               <tr>
-                  <th colspan="4">KOFORIDUA</th>
+                  <!---<th colspan="5">Eastern Region</th>-->
               </tr>
               <tr>
+                <td>Eastern Region,Koforidua</td>
                   <td>SGE.CORS/2020/2</td>
                   <td>522398.945</td>
                   <td>1153213.880</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
 
               <tr>
-                <th colspan="4">AKIM-ODA</th>
+               <!--- <th colspan="5">Eastern Region</th>-->
             </tr>
             <tr>
+                <td>Eastern Region,Akim-Oda</td>
                 <td>SGE.CORS/2020/4</td>
                 <td>455831.538</td>
                 <td>904842.406</td>
-                <td>Not Functioning</td> 
+                <td>Not Functioning</td>
             </tr>
             </tr>
 
               <tr>
-                  <th colspan="4">BOLGATANGA</th>
+                <!---<th colspan="5">Upper East Region</th>-->
               </tr>
               <tr>
+                <td>Upper East Region,Bolga</td>
                   <td>SGUE.BOL/CORS/1</td>
                   <td>2222780.230</td>
                   <td>951173.610</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
 
+
               <tr>
-                  <th colspan="4">TAMALE</th>
+                 <!---<th colspan="5">Northern Region</th>-->
               </tr>
               <tr>
+                <td>Northern Region,Tamale</td>
                   <td>TAML. CORS</td>
                   <td>1717451.990</td>
                   <td>959895.970</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
 
               <tr>
-                  <th colspan="4">KUMASI</th>
+                  <!---<th colspan="5">Ashanti Region</th>-->
               </tr>
               <tr>
+                <td>Ashanti Region,Kumasi</td>
                   <td>SGA.CORS/2020/3</td>
                   <td>732285.928</td>
                   <td>673148.096</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
               </tr>
               
-
               <tr>
-                  <th colspan="4">TAKORADI</th>
+               <!---<th colspan="5">Western Region</th>-->
               </tr>
               <tr>
+                <td>Western Region,Takoradi</td>
                   <td>SGW.CORS/2020/5</td>
                   <td>93007.418</td>
                   <td>618293.344</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
               </tr>
 
+
               <tr>
-                  <th colspan="4">TARKWA</th>
+                  <!---<th colspan="5">Western Region</th>-->
               </tr>
               <tr>
+                <td>Western Region,Tarkwa</td>
                   <td>SGW.CORS/2020/6</td>
                   <td>228146.159</td>
                   <td>536284.132</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
               </tr>
 
               <tr>
-                  <th colspan="4">WINNEBA</th>
+                  <!---<th colspan="5">Central Region</th>-->
               </tr>
               <tr>
+                <td>Central Region,Winneba</td>
                   <td>SGC.CORS/2020/7</td>
                   <td>250715.197</td>
                   <td>1033251.402</td>
-                  <td>Functioning</td> 
+                  <td>Functioning</td>
               </tr>
               </tr>
             </tbody> 
