--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OMofyoQBZ-o4sXmRyFH625V
             </form>
         <div class="section-Regions"> -->
             <div class="app-container">
-                <h1>Search (Enter region name)</h1>
+                <h1>Search Region </h1>
                 <div id="portexe-search-root"></div>
                 <div id="portexe-table-container">
                 <table id="portexe-data-table">
