--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OMofyoQBZ-o4sXmRyFH625V
                    <!---<th colspan="5">Volta Region</th>-->
                   </tr>
                   <tr> 
-                  <td>Volta Region,HO</td>
+                  <td>Volta Region,Ho</td>
                   <td>SGV.CORS/2020/1</td>
                   <td>704374.684</td>
                   <td>1429667.308</td>
