--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 //SGW.CORS/2020/6
                 addMarker({coords:{lat:5.2976810,lng:-2.0000410},iconImage:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',content:"<h3>SGE.CORS/2020/6</h3>"});
 
-                //SGW.CORS/2020/7
-                addMarker({coords:{lat:5.3606000,lng:-0.6331920},iconImage:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',content:"<h3>SGE.CORS/2020/7</h3>"});
+                //SGC.CORS/2020/7
+                addMarker({coords:{lat:5.3606000,lng:-0.6331920},iconImage:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',content:"<h3>SGC.CORS/2020/7</h3>"});
 
                  //GCP COORDINATES
            // addMarker({coords:{lat:5.1128910,lng:-1.2434330},
