--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
                 //SGC.CORS/2020/7
                 addMarker({coords:{lat:5.3606000,lng:-0.6331920},iconImage:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',content:"<h3>SGC.CORS/2020/7</h3>"});
-
+                
+                //SGGA.A0400/19/1
+                addMarker({coords:{lat:5.633692,lng:-0.087641},iconImage:'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',content:"<h3>SGGA.A0400/19/1</h3>"});
                  //GCP COORDINATES
-           // addMarker({coords:{lat:5.1128910,lng:-1.2434330},
-           // content:"<h3>SGC E443/11/3</h3>"});
-
+           
                 //ADD BEACH MARKER
                 function addMarker(props){
                     var marker = new google.maps.Marker({
