--- a/index.html
+++ b/index.html
@@ -144,6 +144,30 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OMofyoQBZ-o4sXmRyFH625V
                   <td>Functioning</td>
                   </tr>
 
+                 <tr>
+                    <!---<th colspan="5">Greater Accra</th>-->
+                   </tr>
+                   <tr> 
+                   <td>Greater Accra,Spintex</td>
+                   <td>SGGA.A0400/19/1</td>
+                   <td>349990.456</td>
+                   <td>1231445.473</td>
+                   <td>Functioning</td>
+                   </tr> 
+               <tr>
+
+                    <tr>
+                    <!---<th colspan="5">Greater Accra</th>-->
+                   </tr>
+                   <tr> 
+                   <td>Greater Accra,Spintex</td>
+                   <td>SGGA.A0400/19/1</td>
+                   <td>349990.456</td>
+                   <td>1231445.473</td>
+                   <td>Functioning</td>
+                   </tr> 
+               <tr>
+
               <tr>
                   <!---<th colspan="5">Eastern Region</th>-->
               </tr>
