--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3OMofyoQBZ-o4sXmRyFH625V
                     <!---<th colspan="5">Greater Accra</th>-->
                    </tr>
                    <tr> 
-                   <td>Greater Accra,Spintex</td>
-                   <td>SGGA.A0400/19/1</td>
-                   <td>349990.456</td>
-                   <td>1231445.473</td>
+                   <td>Greater Accra,SMD</td>
+                   <td>SGGA.EX/19/1</td>
+                   <td>333465.499</td>
+                   <td>1199646.418</td>
                    <td>Functioning</td>
                    </tr> 
                <tr>
